Wrote some more

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,5 @@
 rmd_files: ["index.Rmd", "intro.Rmd",
-            "problems.Rmd", "design.Rmd",
+            "problems.Rmd", "math.Rmd", "design.Rmd",
             "system.Rmd", "example.Rmd", "discussion.Rmd",
             "glossary.Rmd", "appendix.Rmd", "references.Rmd"]
 delete_merged_file: true
