Wrote some more

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,6 @@
-rmd_files: ["index.Rmd", "intro.Rmd",
-            "problems.Rmd", "math.Rmd", "design.Rmd",
+rmd_files: ["index.Rmd", "intro.Rmd", "goals.Rmd",
+            "problems.Rmd", "design.Rmd",
             "system.Rmd", "example.Rmd", "discussion.Rmd",
-            "glossary.Rmd", "appendix.Rmd", "references.Rmd"]
+            "glossary.Rmd", "appendix.Rmd", "math.Rmd", "references.Rmd"]
 delete_merged_file: true
 
