--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,4 @@
-rmd_files: ["index.Rmd", "litreview.Rmd",
+rmd_files: ["index.Rmd", "introduction.Rmd", "litreview.Rmd",
             "problems.Rmd", "goals.Rmd", "design.Rmd",
             "system.Rmd", "example.Rmd", "discussion.Rmd",
             "glossary.Rmd", "appendix.Rmd", "math.Rmd", "references.Rmd"]
