Wrote some more

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,6 @@
 rmd_files: [
             "index.Rmd",
+            # "acknowledgements.Rmd",
             "introduction.Rmd",
             "litreview.Rmd",
             "problems.Rmd",
